k8s/mario-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mario-virtualservice
spec:
  hosts:
  - "mario-test.com"
  gateways:
  - mario-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
         host: mario-service
         port:
           number: 3000
